src/objects/Epic__c.object
<CustomObject>
    <description>An Epic is a ticket that holds different related tickets</description>
    <fields>
        <fullName>Close_Epic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Epic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Priority__c</fullName>
        <defaultValue>&quot;Sev 3&quot;</defaultValue>
        <label>Max Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sev 0</fullName>
                </value>
                <value>
                    <fullName>Sev 1</fullName>
                </value>
                <value>
                    <fullName>Sev 2</fullName>
                </value>
                <value>
                    <fullName>Sev 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>PARTIALLY DONE</fullName>
                </value>
                <value>
                    <fullName>DONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Days_of_Work__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total days of work under this epic</description>
        <label>Total Estimated Days of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Epic</label>
    <nameField>
        <displayFormat>EPIC-{0000000}</displayFormat>
        <label>Epic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Epics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>